# apinine_reference_layout

./: .gitignore  .pre-commit-config.yaml  README.md  openapi.yaml  openapi.yml.tpl  pyproject.toml  redocly.yaml
.github/workflows/: apidoc.yml  build-test-deploy-map.yml  build-test-deploy.yml  cognito_login.yml  drought.yml  flood.yml  get_token.yml  lambda-authorizer.yml  map.yml  refresh_token.yml  terraform_apply.yml  tests_on_pr.yml  user.yml  wildfire.yml
infra/: apiv2.tf  authorizer.tf  backend.tf  cognito.tf  data.tf  drought.tf  flood.tf  flood_rcp26.tf  flood_rcp45.tf  flood_rcp85.tf  get_token.tf  gh_authorizer_role.tf  gh_flood_role.tf  login.tf  map_drought.tf  map_flood.tf  map_flood_rcp26.tf  map_flood_rcp45.tf  map_flood_rcp85.tf  provider.tf  refresh.tf  terraform.tfvars  user.tf  variables.tf  wildfire.tf
infra/api/: README.md  apiv2.tf  cognito.tf  data.tf  flood_batch.tf  locals.tf  main.tf  map_flood.tf  map_iam.tf  map_wildfire.tf  provider.tf  terraform.tfvars  variables.tf  wildfire.tf
infra/apidoc/: backend.tf  bucket.tf  cloudfront.tf  data.tf  locals.tf  provider.tf
src/: Makefile  Taskfile.yml
src/api/: .dockerignore  Makefile
src/api/common/geocoder/: geocoder.py  gmaps_geocoder.py  pyproject.toml  pytest.ini
src/api/common/geocoder/src/geocoder/: geocoder.py  gmaps_geocoder.py
src/api/common/geocoder/tests/: test_gmaps_geocoder.py
src/api/common/land_use/: README.md  pyproject.toml
src/api/common/land_use/src/land_use/: util_CLC_conversion.py
src/api/common/readgeodata/: interfaces.py  pyproject.toml  pytest.ini  rasterioreader.py
src/api/common/readgeodata/src/readgeodata/: interfaces.py  rasterioreader.py  sampler.py
src/api/common/readgeodata/tests/: conftest.py  test_read_coordinates_point.py  test_sampler.py
src/api/common/readgeodata/tests/fixtures/: ostia_near_sea_fixture_3bands_metadata.tiff
src/authorizer/: Dockerfile  interfaces.py  lambda_authorizer.py  main.py  pytest.ini  (+2 more)
(+193 files in other folders)
