[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "geocoder"
version = "1.0.0"
authors = [{ name = "Eoliann" }]
description = "Python package developer's cheat sheet (using pyproject.toml)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["googlemaps~=4.10.0", "boto3~=1.34.36", "aws-lambda-powertools~=2.33.1", "aws_xray_sdk~=2.12.1"]

[project.optional-dependencies]
test = ["pytest ~=8.0.0", "pytest-env"]
