[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "readgeodata"
version = "1.0.0"
authors = [{ name = "Eoliann" }]
description = "Python package developer's cheat sheet (using pyproject.toml)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["rasterio~=1.3.9"]

[project.optional-dependencies]
test = ["pytest ~=8.0.0", "pytest-env"]
